Fix mobile spacing between sections

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -15,16 +15,26 @@ body {
 }
 
 section h3 {
-  @apply text-teal-300 text-5xl font-bold;
+  @apply text-teal-300 text-3xl font-bold;
 }
 
 hr {
   border: 0;
   height: 1px;
-  width: 50%;
+  width: 100%;
   background-image: linear-gradient(to right, rgba(129, 230, 217, 1), rgba(129, 230, 217, 0.75), rgba(129, 230, 217, 0));
 }
 
 .highlight {
   @apply text-teal-300 font-bold;
+}
+
+@media (min-width: 768px) {
+  hr {
+    width: 50%;
+  }
+
+  section h3 {
+    @apply text-5xl;
+  }
 }
